--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.0.1",
 	"description": "This is a boilerplate of an Apify actor.",
 	"dependencies": {
-		"apify": "^2.0.0"
+		"apify": "^2.0.0",
+		"moment": "^2.29.1"
 	},
 	"devDependencies": {
 		"@apify/eslint-config": "^0.1.3",
